// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[`create 1`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tokyo",
  "country": "JP",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "id": Any<String>,
  "image": null,
  "impact_score": 0,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "phone": "9379911",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "social_causes": [
    "SOCIAL",
    "MENTAL",
  ],
  "status": "ACTIVE",
  "type": "COOP",
  "updated_at": Any<String>,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[`create 2`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tehran",
  "country": "IR",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "id": Any<String>,
  "image": null,
  "impact_score": 0,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "phone": "9899993",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "social_causes": [
    "SOCIAL",
    "MENTAL",
  ],
  "status": "ACTIVE",
  "type": "SOCIAL",
  "updated_at": Any<String>,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[`create 3`] = `
{
  "error": ""phone" must be a string",
}
`;
